exports[`<FormAttention /> Shows loader when data is fetching 1`] = `
<div
  className="wrapper">
  <div
    className="formsHeading">
    <h1>
      Fill Forms
    </h1>
    <span
      className="allForms">
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/provider/forms/all">
        See All Forms
      </Link>
    </span>
    <span
      className="pageDescription">
      Your forms section is where you can find all of the forms that you have been assigned to complete. You can also generate PDF copies to share with credentialing entities such as hospitals, medical facilities, and insurance payers.
    </span>
    <h3
      className="pageSubtitle">
      Forms Needing Your Attention
    </h3>
  </div>
  <LoadingOverlay
    backdropClassName="whiteOverlay"
    className=""
    inline={true}
    isOpen={true}
    title="Loading Form Data..." />
  <div
    className="pendingForms">
    <div
      className="pendingFormsHeader">
      <span
        className="nameCol">
        Name
      </span>
      <span
        className="assignedCol">
        Assigned
      </span>
      <span
        className="statusCol">
        Status
      </span>
    </div>
  </div>
</div>
`;

exports[`<FormAttention /> renders pending forms 1`] = `
<div
  className="wrapper">
  <div
    className="formsHeading">
    <h1>
      Fill Forms
    </h1>
    <span
      className="allForms">
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/provider/forms/all">
        See All Forms
      </Link>
    </span>
    <span
      className="pageDescription">
      Your forms section is where you can find all of the forms that you have been assigned to complete. You can also generate PDF copies to share with credentialing entities such as hospitals, medical facilities, and insurance payers.
    </span>
    <h3
      className="pageSubtitle">
      Forms Needing Your Attention
    </h3>
  </div>
  <div
    className="pendingForms">
    <div
      className="pendingFormsHeader">
      <span
        className="nameCol">
        Name
      </span>
      <span
        className="assignedCol">
        Assigned
      </span>
      <span
        className="statusCol">
        Status
      </span>
    </div>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Methodist Hospital
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Test Test
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Methodist Hospital
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Test Test
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Methodist Hospital
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Test Test
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Methodist Hospital
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      Test Test
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
  <div
    className="pendingFormRow"
    onClick={[Function]}>
    <span
      className="nameCol">
      <BlueprintIcon
        className="icon"
        inheritFontSize={false}
        large={false}
        type="document" />
      A Form That is Archived
    </span>
    <span
      className="assignedCol">
      12/28/2016
    </span>
    <span
      className="statusCol">
      <span
        className="completionStatus" />
       To Do
    </span>
  </div>
</div>
`;
